@@ -1,5 +1,11 @@
 2002-05-08  Joe Shaw  <joe@assbarn.com>
 
+	* generator/ObjectGen.cs (GenProperty): Comment the last checkin out
+	because it exposes a compiler bug.
+	(GenSignal): Back this change out.
+
+2002-05-08  Joe Shaw  <joe@assbarn.com>
+
 	* */Makefile.in: Don't allow the shell to do file globbing; makes
 	--recurse work.
 
